<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/habitsPagerTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ui.ViewPagerFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/habitTypesViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>