<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    card:cardCornerRadius="8dp"
    card:cardElevation="4dp"
    card:cardPreventCornerOverlap="false"
    card:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/habitName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/habitDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/doneButton"
            android:layout_weight="1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_done_24"
            android:background="@color/purple_500" />
    </LinearLayout>


</androidx.cardview.widget.CardView>